ws/Pengo/gal/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package parser;

import java.io.BufferedReader;
import java.io.FileReader;
import java.io.IOException;
import java.util.LinkedList;
import java.util.List;
import java.util.ListIterator;

import ast.*;
import ast.export.*;
import util_gal.*;

public class Parser implements ParserConstants {

  public static AST from_file(String path_file) throws Exception
  {
    AST ast = new Parser(new BufferedReader(new FileReader(path_file))).parse();
    return ast;
  }

  public static boolean option(String option, String [] args)
  {
    int i = 0 ;
    while (i < args.length){
      if (args[i].equals(option)){ return true; }
      i++;
    }
    return false;
  }

  public static int index_of_option(String option, String[] args)
  {
    int i = 0 ;
    while (i < args.length) {
      if (args[i].equals(option)){ return i; }
      i++;
    }
    return -1;
  }

  public static void main(String[] args) throws Exception
  {
    AST ast;
    int i = index_of_option("-file", args) ;
    ast = from_file(args[i+1]) ;


    if ( option("-ast", args) ) {
      AstPrinter printer = new AstPrinter();
      ast.accept(printer);
      System.out.println("\n// Exporting the AST of the parsed automata in .dot");
      System.out.println(printer.to_dot());
    }

    if ( option("-aut", args) ) {
      System.out.println("// Exporting the CFG of the parsed automata in .dot");
                        new AutPrinter(System.out, ast);
    }

    if ( option("-txt", args) ) {
      Ast2Gal printer = new Ast2Gal();
      ast.accept(printer);
      System.out.println("\n// Exporting the reformatted SRC of the parsed automata in .txt");
      System.out.println(printer.export());
    }

        }

// == THE PARSER ==
  final public 

AST parse() throws ParseException {LinkedList<Automaton> automata = new LinkedList<Automaton>();
  Automaton aut;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KEY:
      case CONDITION:
      case ACTION:
      case DIRECTION:
      case CATEGORY:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      aut = pAutomaton();
automata.add(aut);
    }
    jj_consume_token(0);
{if ("" != null) return new AST(automata);}
    throw new Error("Missing return statement in function");
}

// STATE 
  final public 
State pState() throws ParseException {String name ;
    jj_consume_token(29);
    name = pStateID();
    jj_consume_token(30);
{if ("" != null) return new State(name);}
    throw new Error("Missing return statement in function");
}

  final public String pStateID() throws ParseException {String name ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KEY:
    case CONDITION:
    case ACTION:
    case DIRECTION:
    case CATEGORY:
    case ID:{
      name = pIdentifier();
{if ("" != null) return name;}
      break;
      }
    case UNDERSCORE:{
      jj_consume_token(UNDERSCORE);
{if ("" != null) return "_";}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
{if ("" != null) return "";}
    }
    throw new Error("Missing return statement in function");
}

// AUTOMATON
  final public 
Automaton pAutomaton() throws ParseException {String name ;
  String entry_state ;
  LinkedList<Mode> modes = new LinkedList<Mode>();
  Mode mode;
    name = pIdentifier();
    jj_consume_token(29);
    entry_state = pIdentifier();
    jj_consume_token(30);
    jj_consume_token(31);
    label_2:
    while (true) {
      mode = pMode();
modes.add(mode);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 33:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(32);
{if ("" != null) return new Automaton(name, new State(entry_state), modes) ;}
    throw new Error("Missing return statement in function");
}

// MODE, BEHAVIOUR, TRANSITION 
  final public 
Mode pMode() throws ParseException {State state;
  Mode mode;
  Behaviour behaviour;
    jj_consume_token(33);
    state = pState();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 34:{
      jj_consume_token(34);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    behaviour = pBehaviour();
{if ("" != null) return new Mode(state, behaviour) ;}
    throw new Error("Missing return statement in function");
}

  final public Behaviour pBehaviour() throws ParseException {LinkedList<Transition> transitions = new LinkedList<Transition>();
  Transition t;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KEY:
      case CONDITION:
      case UNARY:
      case 29:
      case 35:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      t = pTransition();
transitions.add(t) ;
    }
{if ("" != null) return new Behaviour(transitions);}
    throw new Error("Missing return statement in function");
}

  final public Transition pTransition() throws ParseException {Condition condition ;
  Actions actions = new Actions();
  State state ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 35:{
      jj_consume_token(35);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    condition = pCondition();
    jj_consume_token(36);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ACTION:
    case INTEGER:{
      pActions(actions);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(34);
    state = pState();
{if ("" != null) return new Transition(condition, actions, state) ;}
    throw new Error("Missing return statement in function");
}

// ACTIONS 
  final public 
void pActions(Actions actions) throws ParseException {FunCall action;
  String op = null;
    action = pProbabilisticAction();
actions.add(action);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DISJUNCTION:
      case SEQUENCE:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      op = pActionOperator();
actions.set(op);
      action = pProbabilisticAction();
actions.add(action);
    }
}

  final public String pActionOperator() throws ParseException {Token token;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DISJUNCTION:{
      token = jj_consume_token(DISJUNCTION);
      break;
      }
    case SEQUENCE:{
      token = jj_consume_token(SEQUENCE);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token.image;}
    throw new Error("Missing return statement in function");
}

  final public FunCall pProbabilisticAction() throws ParseException {int percent;
  Token action ;
  LinkedList<Parameter> parameters = new LinkedList<Parameter >();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      percent = pPercent();
      action = jj_consume_token(ACTION);
      parameters = pOptionalParameters();
{if ("" != null) return new FunCall(percent, action.image, parameters) ;}
      break;
      }
    case ACTION:{
      action = jj_consume_token(ACTION);
      parameters = pOptionalParameters();
{if ("" != null) return new FunCall(action.image, parameters) ;}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public int pPercent() throws ParseException {Token token ;
    token = jj_consume_token(INTEGER);
    jj_consume_token(37);
{if ("" != null) return Integer.parseInt(token.image);}
    throw new Error("Missing return statement in function");
}

// CONDITION
  final public 
Condition pCondition() throws ParseException {Expression expr ;
    expr = pExpression();
{if ("" != null) return new Condition(expr) ;}
    throw new Error("Missing return statement in function");
}

  final public Expression pExpression() throws ParseException {Expression e, expr ;
  Token token ;
  FunCall pred ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 29:{
      jj_consume_token(29);
      e = pExpression();
      jj_consume_token(30);
      expr = pBinop_Expression(e);
{if ("" != null) return expr ;}
      break;
      }
    case UNARY:{
      token = jj_consume_token(UNARY);
      expr = pExpression();
{if ("" != null) return new UnaryOp(token.image, expr) ;}
      break;
      }
    case KEY:
    case CONDITION:{
      pred = pPredicate();
      expr = pBinop_Expression(pred);
{if ("" != null) return expr ;}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Expression pBinop_Expression(Expression e1) throws ParseException {Token token ;
  Expression e2 ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONJUNCTION:
    case DISJUNCTION:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONJUNCTION:{
        token = jj_consume_token(CONJUNCTION);
        break;
        }
      case DISJUNCTION:{
        token = jj_consume_token(DISJUNCTION);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = pExpression();
{if ("" != null) return new BinaryOp(token.image,e1,e2) ;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
{if ("" != null) return e1 ;}
    }
    throw new Error("Missing return statement in function");
}

  final public FunCall pPredicate() throws ParseException {Token token ;
  LinkedList<Parameter> parameters = new LinkedList<Parameter>() ;
  Key key ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KEY:{
      token = jj_consume_token(KEY);
      jj_consume_token(29);
      key = pKeyName();
      jj_consume_token(30);
parameters.add(key) ;
      {if ("" != null) return new FunCall(token.image, parameters) ;}
      break;
      }
    case CONDITION:{
      token = jj_consume_token(CONDITION);
      parameters = pOptionalParameters();
{if ("" != null) return new FunCall(token.image, parameters) ;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// ARGUMENTS
  final public 
LinkedList<Parameter> pOptionalParameters() throws ParseException {LinkedList<Parameter> parameters = new LinkedList<Parameter>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 29:{
      jj_consume_token(29);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIRVAR:
      case CATVAR:
      case ENTVAR:
      case DOLLAR:
      case DIRECTION:
      case OPPOSITE:
      case CATEGORY:
      case UNDERSCORE:
      case INTEGER:{
        pParameters(parameters);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(30);
{if ("" != null) return parameters;}
      break;
      }
    default:
      jj_la1[15] = jj_gen;
{if ("" != null) return parameters;}
    }
    throw new Error("Missing return statement in function");
}

  final public void pParameters(LinkedList<Parameter> parameters) throws ParseException {Parameter p;
    p = pParameter();
parameters.add(p);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 38:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(38);
      p = pParameter();
parameters.add(p);
    }
}

  final public Parameter pParameter() throws ParseException {Token token ;
  Parameter argument ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DIRECTION:{
      argument = pDirection();
{if ("" != null) return argument ;}
      break;
      }
    case CATEGORY:{
      argument = pCategory();
{if ("" != null) return argument ;}
      break;
      }
    case INTEGER:{
      argument = pIntegerValue();
{if ("" != null) return argument ;}
      break;
      }
    case UNDERSCORE:{
      token = jj_consume_token(UNDERSCORE);
{if ("" != null) return new Variable();}
      break;
      }
    case DIRVAR:
    case CATVAR:
    case ENTVAR:
    case DOLLAR:
    case OPPOSITE:{
      argument = pArgumentVar();
{if ("" != null) return argument ;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// INTEGER + unity
  final public 
Parameter pIntegerValue() throws ParseException {Token token ;
    token = jj_consume_token(INTEGER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 39:{
      jj_consume_token(39);
{if ("" != null) return new IntDegree(Integer.parseInt(token.image));}
      break;
      }
    case 37:{
      jj_consume_token(37);
{if ("" != null) return new IntPercent(Integer.parseInt(token.image));}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
{if ("" != null) return new IntValue(Integer.parseInt(token.image));}
    }
    throw new Error("Missing return statement in function");
}

// DIRECTION 	
  final public 
Direction pDirection() throws ParseException {Token token;
  Direction d;
    token = jj_consume_token(DIRECTION);
{if ("" != null) return new Direction(new Terminal(token.image));}
    throw new Error("Missing return statement in function");
}

// CATEGORY 
  final public 
Category pCategory() throws ParseException {Token token;
    token = jj_consume_token(CATEGORY);
{if ("" != null) return new Category(new Terminal(token.image));}
    throw new Error("Missing return statement in function");
}

// KEY NAME 
  final public 
Key pKeyName() throws ParseException {Token token ;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      token = jj_consume_token(INTEGER);
      break;
      }
    case DIRVAR:
    case CATVAR:
    case ENTVAR:
    case LOWERCASE:{
      token = pLowercase();
      break;
      }
    case SPECIAL_KEY:{
      token = jj_consume_token(SPECIAL_KEY);
      break;
      }
    case MOUSE:{
      token = jj_consume_token(MOUSE);
      break;
      }
    case UNDERSCORE:{
      token = jj_consume_token(UNDERSCORE);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new Key(new Terminal(token.image)) ;}
    throw new Error("Missing return statement in function");
}

// SIMPLE EXPRESSION
  final public 
Variable pArgumentVar() throws ParseException {Variable var;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPPOSITE:{
      jj_consume_token(OPPOSITE);
      jj_consume_token(29);
      var = pArgumentVar();
      jj_consume_token(30);
var.opposite(); {if ("" != null) return var;}
      break;
      }
    case DIRVAR:
    case CATVAR:
    case ENTVAR:
    case DOLLAR:{
      var = pVariable();
{if ("" != null) return var;}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// VARIABLE
  final public 
Variable pVariable() throws ParseException {int i = 1;
  Variable var = new Variable();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DIRVAR:{
      jj_consume_token(DIRVAR);
var.direction(); {if ("" != null) return var;}
      break;
      }
    case CATVAR:{
      jj_consume_token(CATVAR);
var.category(); {if ("" != null) return var;}
      break;
      }
    case ENTVAR:{
      jj_consume_token(ENTVAR);
{if ("" != null) return new Variable(i);}
      break;
      }
    case DOLLAR:{
      jj_consume_token(DOLLAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:{
        i = pInteger();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
var = new Variable(i);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 40:{
        jj_consume_token(40);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DIRVAR:{
          jj_consume_token(DIRVAR);
var.direction();
          break;
          }
        case CATVAR:{
          jj_consume_token(CATVAR);
var.category();
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
{if ("" != null) return var;}
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// LOWERCASE  
  final public 
Token pLowercase() throws ParseException {Token token;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LOWERCASE:{
      token = jj_consume_token(LOWERCASE);
      break;
      }
    case DIRVAR:{
      token = jj_consume_token(DIRVAR);
      break;
      }
    case CATVAR:{
      token = jj_consume_token(CATVAR);
      break;
      }
    case ENTVAR:{
      token = jj_consume_token(ENTVAR);
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
}

// IDENTIFIER
  final public 
String pIdentifier() throws ParseException {Token token;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      token = jj_consume_token(ID);
      break;
      }
    case ACTION:{
      token = jj_consume_token(ACTION);
      break;
      }
    case CONDITION:{
      token = jj_consume_token(CONDITION);
      break;
      }
    case KEY:{
      token = jj_consume_token(KEY);
      break;
      }
    case CATEGORY:{
      token = jj_consume_token(CATEGORY);
      break;
      }
    case DIRECTION:{
      token = jj_consume_token(DIRECTION);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token.image;}
    throw new Error("Missing return statement in function");
}

// INTEGER
  final public 
int pInteger() throws ParseException {Token token;
    token = jj_consume_token(INTEGER);
{if ("" != null) return Integer.parseInt(token.image);}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[27];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x80141c0,0x80541c0,0x0,0x0,0x208000c0,0x0,0x10000100,0x6000000,0x6000000,0x10000100,0x208000c0,0x3000000,0x3000000,0xc0,0x1005fc00,0x20000000,0x0,0x1005fc00,0x0,0x10161e00,0xbc00,0x10000000,0xc00,0x0,0x3c00,0x101c00,0x80141c0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x2,0x4,0x8,0x8,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x40,0x0,0xa0,0x0,0x0,0x0,0x0,0x100,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 27; i++) jj_la1[i] = -1;
  }
